# schnorr-sig

./: Cargo.toml  LICENSE  README.md  sonar-project.properties
.github/workflows/: ci.yml  qa.yml
benches/: schnorr.rs
src/: batch.rs  constants.rs  derivation.rs  error.rs  keypair.rs  lib.rs  private.rs  public.rs  rand_utils.rs  signature.rs
tests/: schnorr.rs
