[package]
name = "schnorr-sig"
version = "0.1.0"
authors = [
    "Travis Alan Baumbaugh <TABaumbaugh@gmail.com>",
    "Robin Salen <salenrobin@gmail.com>"
]
edition = "2018"

[dependencies]
bitvec = { version = "0.22", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
hash = { git = "https://github.com/ToposWare/hash.git", branch = "main", default-features = false, features = ["f63"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
cheetah = { git = "https://github.com/ToposWare/cheetah.git", branch = "main", default-features = false }
subtle = { version = "2.4", default-features = false }

[dev-dependencies]
bincode = "1"
criterion = "0.3"

[features]
default = ["serialize"]
serialize = ["serde", "cheetah/serialize"]

[[bench]]
name = "schnorr"
harness = false
