[package]
name = "schnorr-sig"
description = "Implementation of a STARK-friendly version of Schnorr signatures over the Cheetah curve"
authors = ["Toposware Developers <dev@toposware.com>"]
homepage = "https://github.com/ToposWare/schnorr-sig"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ToposWare/schnorr-sig"
version = "0.1.0"
edition = "2018"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "signature"]

[dependencies]
bitvec = { version = "0.22", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
hash = { git = "https://github.com/ToposWare/hash.git", branch = "main", default-features = false, features = ["f64"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
cheetah = { git = "https://github.com/ToposWare/cheetah.git", branch = "main", default-features = false }
subtle = { version = "2.4", default-features = false }

[dev-dependencies]
bincode = "1"
criterion = "0.3"

[features]
default = ["serialize", "std"]
serialize = ["serde", "cheetah/serialize"]
std = ["hash/std"]

[[bench]]
name = "schnorr"
harness = false
